android fte: resolve some mac issues